--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<title>Mob Text</title>
 
   <link rel="stylesheet" href="css/index.css">
+  <script src="js/jquery.min.js"></script>
   <script src="js/mobsocket.js"></script>
 	<script src="js/index.js"></script>
 
