Testing with textarea.

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
-  <textarea id="mobtext"></textarea>
+  <textarea id="mobtext" disabled></textarea>
+  <button type="button" id="look">look</button>
 </body>
 </html>
